--- a/portfolio.html
+++ b/portfolio.html
@@ -260,7 +260,7 @@
           </p>
         </div>
 
-        <div>
+        <div class="footer-social">
           <p class="footer-title">Social media</p>
           <ul class="footer-icon">
             <li class="footer-list-icon list">
@@ -293,6 +293,21 @@
             </li>
           </ul>
         </div>
+        <form>
+          <p class="footer-title">Subscribe</p>
+          <label class="footer-lable">
+            <input
+              class="footer-input"
+              type="text"
+              name="Subscribe"
+              placeholder="E-mail" />
+            <button class="btn-subscribe" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg></button
+          ></label>
+        </form>
       </div>
     </footer>
   </body>
